--- a/src/styles/components/_text.scss
+++ b/src/styles/components/_text.scss
@@ -1,7 +1,10 @@
 .text__container {
   align-items: center;
+  bottom: 0;
   display: flex;
   justify-content: center;
+  position: absolute;
+  top: 0;
 }
 
 .text__content {
